update the link

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			</div>
 			<div class="brand_menu text-right w50">
 				<ul>
-					<li><a target="_blank" href="http://themerelic.com/wordpress-themes/unique-blog-pro">Buy Now</a></li>
-					<li><a target="_blank" href="http://demo.reliccommerce.com/unique-blog/pro-home-2/">Pro Demo</a></li>
-					<li><a target="_blank" href="https://themerelic.com/wordpress-themes/unique-blog/">Theme Details</a></li>
+					<li><a target="_blank" href="https://spiderbuzz.com/wordpress-themes/buzz-ecommerce/">Buy Now</a></li>
+					<li><a target="_blank" href="http://demo.spiderbuzz.com/buzz-ecommerce/pro-home4/">Pro Demo</a></li>
+					<li><a target="_blank" href="https://spiderbuzz.com/wordpress-themes/buzz-ecommerce/">Theme Details</a></li>
 				</ul>
 			</div>
 		</div>
